@@ -1,3 +1,9 @@
+2008-11-01 Jens Tkotz <jens@peino.de> 1.5.10-svn-b8
+
+ * Change: Litte layout fixes
+
+ * Change: "Missing" languages in setup are now just an information.
+
 2008-10-31 Jens Tkotz <jens@peino.de> 1.5.10-svn-b7
 
  * Update: wz_tooltip.js V5.3
